<resources>
    <string name="app_name">i210669</string>
    <string name="mentorme">mentor</string>
    <string name="me">me</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="loginText"><b>Login</b></string>
    <string name="forgot_your_password_text">Forgot Your Password?</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="login_text"><b>Login</b></string>
    <string name="me_text">me</string>
    <string name="mentor_text">mentor</string>
    <string name="don_t_have_an_account_text">Don’t have an account? \u0020</string>
    <string name="get_started"><b>Get started!</b></string>
    <string name="name_text">Name</string>
    <string name="enter_name_hint_text">Enter Name</string>
    <string name="enter_email_hint_text">Enter Email</string>
    <string name="enter_contact_number_hint_text">Enter Contact Number</string>
    <string name="contact_number_text">Contact Number</string>
    <string name="sign_up_button_text"><b>Sign Up</b></string>
    <string name="already_have_an_account_text">Already have an account? \u0020</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="country_text">Country</string>
    <string name="select_country_hint_text">Select Country</string>
    <string name="city_text">City</string>
    <string name="select_city_hint_text">Select City</string>
    <string name="enter_password_hint_text">Enter your Password</string>
    <string name="connect_ask_learn">connect. ask. learn.</string>
    <string name="password_format_text">Password must be atleast 8 characters long</string>
    <string name="verify_your_phone_number_text"><b>Verify your phone number</b></string>
    <string name="we_ve_sent_a_code_to_text">We\'ve sent a code to \u0020</string>
    <string name="phone_number_text">+92 321 2242022</string>
    <string name="verify_text"><b>Verify</b></string>
    <string name="resend_code_text">Send code again \u0020</string>
    <string name="resend_code_text2"><b>00:20</b></string>
    <string name="forgot_password_heading_text">Forgot Password?</string>
    <string name="forgot_password_sub_heading_text">Don\'t worry! It happens. Please enter the</string>
    <string name="forgot_sunheading_2_text">email associated with your account.</string>
    <string name="send_text">Send</string>
    <string name="remember_text">"Remember your password? "</string>
    <string name="new_login_text"><u>Login</u></string>
    <string name="reset_password_heading_text">Reset Password?</string>
    <string name="reset_password_sub_heading_text">Please type a new password and re-enter the password. Type something you will remember!</string>
    <string name="new_password_label_text">New Password</string>
    <string name="enter_new_password_hint_text">Enter New Password</string>
    <string name="confirm_password_label_text">Confirm Password</string>
    <string name="re_enter_password_text">Re-enter Password</string>
    <string name="reset_password_button_text">Reset Password</string>
    <string name="don_t_want_to_reset_your_password_text">"Don't want to reset your password? "</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_text">"Hello, "</string>
    <string name="home_name_text">Ali</string>
    <string name="quote_text">Ready for mentorship? Let\'s begin the journey!</string>
    <string name="featured_text">Top Mentors for you</string>
    <string name="view_all_text">View All</string>
    <string name="search_heading">Let\'s Find...</string>
    <string name="search_text"><b>Search</b></string>
    <string name="recent_searches">Recent searches</string>
    <string name="recent_text1">Mentor 1</string>
    <string name="heading_categories">Browse Categories</string>
    <string-array name="names">
        <item>John Cooper</item>
        <item>Martina Watson</item>
        <!-- More names -->
    </string-array>
    <string-array name="roles">
        <item>UX Designer @ Google</item>
        <item>Lead - Technology Officer</item>
        <!-- More roles -->
    </string-array>
</resources>