<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashScreenBgColor"
    tools:context=".ResetPasswordActivity">

    <View
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintWidth_percent="0.1"
        android:background="@drawable/arrow_back"
        android:id="@+id/backArrow"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_heading_text"
        android:textColor="@color/headingTextColor"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:id="@+id/resetPasswordHeading"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/backArrow"
        app:layout_constraintTop_toBottomOf="@id/backArrow"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password_sub_heading_text"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintWidth_max="300dp"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@id/backArrow"
        android:id="@+id/reset_password_sub_heading"
        app:layout_constraintTop_toBottomOf="@id/resetPasswordHeading"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_password_label_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/backArrow"
        android:id="@+id/newPasswordLabel"
        app:layout_constraintTop_toBottomOf="@id/reset_password_sub_heading"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/newPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/text_field_background"
        android:hint="@string/enter_new_password_hint_text"
        android:inputType="textPassword"
        android:textColorHint="@color/textFieldHintTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPasswordLabel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password_label_text"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@id/backArrow"
        android:id="@+id/confirmPasswordLabel"
        app:layout_constraintTop_toBottomOf="@id/newPasswordEditText"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/text_field_background"
        android:hint="@string/re_enter_password_text"
        android:inputType="textPassword"
        android:textColorHint="@color/textFieldHintTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordLabel" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintVertical_chainStyle="packed"
        android:background="@drawable/secondary_button_background"
        android:text="@string/reset_password_button_text"
        android:textColor="@color/primaryTextColor"
        android:id="@+id/sendButton"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAllCaps="false"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_want_to_reset_your_password_text"
        android:textColor="@color/secondaryTextColor"
        app:layout_constraintVertical_chainStyle="packed"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/loginLink"
        android:id="@+id/resendCodeTextView"
        app:layout_constraintTop_toBottomOf="@+id/sendButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:textSize="16sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/loginLink"
        android:text="@string/new_login_text"
        app:layout_constraintVertical_chainStyle="packed"
        android:textColor="@color/headingTextColor"
        app:layout_constraintStart_toEndOf="@id/resendCodeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sendButton"
        android:textSize="16sp"
        app:layout_constraintHorizontal_chainStyle="packed"/>



</androidx.constraintlayout.widget.ConstraintLayout>