<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/button_background"
    tools:context=".MentorLogin">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bubbles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/mentorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/salsa_regular"
        android:gravity="center"
        android:text="@string/mentor_text"
        android:textColor="@color/appTitleColor"
        android:textSize="60sp"
        app:layout_constraintEnd_toStartOf="@+id/meTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        android:autoSizeTextType="uniform"
        app:layout_constraintTop_toBottomOf="@+id/top_guideline" />

    <TextView
        android:id="@+id/meTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/salsa_regular"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:text="@string/me_text"
        android:textColor="@color/titleColorSecond"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mentorTextView"
        app:layout_constraintTop_toTopOf="@+id/mentorTextView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/container"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/meTextView">

        <!-- Login title inside the container -->
        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:textFontWeight="700"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:autoSizeTextType="uniform"
            android:layout_marginTop="16dp"
            android:text="Mentor Login"
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/emailEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginTitle" />

        <!-- Email EditText -->
        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"

            android:autofillHints=""
            android:background="@drawable/text_field_background"
            android:hint="@string/enter_email_hint_text"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/textFieldHintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailLabel" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:autoSizeTextType="uniform"
            android:text="@string/password_text"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toTopOf="@id/passwordEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:background="@drawable/text_field_background"
            android:hint="@string/enter_password_hint_text"
            android:inputType="textPassword"
            android:textColorHint="@color/textFieldHintTextColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordLabel" />

        <!-- Forgot Your Password TextView -->
        <TextView
            android:id="@+id/forgotPasswordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:autoSizeTextType="uniform"
            android:text="@string/forgot_your_password_text"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <!-- Login Button -->
        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:text="@string/loginText"
            android:textColor="@color/containerColor"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAllCaps="false"
            android:fontFamily="@font/dmsans_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTextView"
            app:layout_constraintWidth_percent="0.5" />

        <!-- Sign Up TextView -->

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:autoSizeTextType="uniform"
            android:text="@string/don_t_have_an_account_text"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintEnd_toStartOf="@id/signUpLink"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signUpLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:autoSizeTextType="uniform"
            android:text="@string/sign_up"
            android:textColor="@color/headingTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signUpTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
