<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/splashScreenBgColor"
    tools:context=".SplashScreenActivity">

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bubbles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.45"
        app:layout_constraintHeight_percent="0.22" />


    <TextView
        android:id="@+id/mentorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/salsa_regular"
        android:gravity="center"
        android:text="@string/mentor_text"
        android:textColor="@color/appTitleColor"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/meTextView"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/meTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/salsa_regular"
        android:gravity="center"
        android:autoSizeTextType="uniform"
        android:text="@string/me_text"
        android:textColor="@color/titleColorSecond"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mentorTextView"
        app:layout_constraintTop_toTopOf="@+id/mentorTextView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_ask_learn"
        android:textColor="@color/headingTextColor"
        android:textSize="20sp"
        android:fontFamily="@font/dmsans_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentorTextView" />


</androidx.constraintlayout.widget.ConstraintLayout>