<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.5"
        android:background="@color/splashScreenBgColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bubbles"
            app:layout_constraintHeight_default="percent"
            app:layout_constraintHeight_percent="0.25"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/bubbles"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.5" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/back_arrow"
            android:background="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_heading"
            android:text="@string/search_heading"
            android:textSize="30sp"
            android:textColor="@color/headingTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back_arrow"
            android:layout_marginStart="25dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/search_edit_text"
            app:layout_constraintWidth_percent="0.8"
            android:drawableStart="@drawable/search_bar_search_icon"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/search_heading"
            android:background="@drawable/search_background"
            android:drawablePadding="10dp"
            android:padding="9dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="12sp"
            android:hint="@string/search_text"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:textColorHint="@color/textFieldHintTextColor"
            android:autofillHints="" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recent_searches"
            android:text="@string/recent_searches"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:textColor="@color/headingTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_edit_text"
            android:layout_marginTop="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recent_text1"
            android:text="@string/recent_text1"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_searches"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/clear_button"
            android:background="@drawable/clear_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_searches"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recent_text2"
            android:text="@string/recent_text1"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_text1"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/clear_button2"
            android:background="@drawable/clear_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_button"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recent_text3"
            android:text="@string/recent_text1"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recent_text2"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:id="@+id/clear_button3"
            android:background="@drawable/clear_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/clear_button2"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>